<resources>
    <string name="app_name">demo</string>
    <string name="login">login</string>
    <string name="nocontrollive">no control live</string>
    <string name="controllive">live</string>
    <string name="devicelist">device list</string>
    <string name="customplayerlist">custom player list</string>
    <string name="library">library</string>
    <string name="devicesetting">device setting</string>
    <string name="usersetting">user setting</string>
    <string name="devicebind">add device</string>
    <string name="all">all</string>
    <string name="back">back</string>
    <string name="scan_friend_qr">Add Friend\'s Camera</string>
    <string name="demo_video_list">Video List</string>
    <string name="logout_success">Logout Sccess</string>
    <string name="shared_request_success">Share request sent</string>
    <string name="shared_request_failed">Share request not sent</string>
    <string name="login_failed">Login failed</string>
    <string name="login_sccessful_sdk">login successful</string>
    <string name="no_data">No data</string>
    <string name="demo_query_shared_list">query camera sharing requests</string>
</resources>
