<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="@dimen/dp_60"
        tools:context=".MainActivity">

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:visibility="gone"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/demolist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login">

            <Button
                android:id="@+id/devicelist"
                android:layout_width="match_parent"
                android:onClick="clickShowDeviceList"
                android:layout_height="wrap_content"
                android:text="@string/devicelist" />

            <Button
                android:id="@+id/customdevicelist"
                android:layout_width="match_parent"
                android:onClick="clickShowCustomDeviceList"
                android:layout_height="wrap_content"
                android:text="@string/customdevicelist" />
            <Button
                android:id="@+id/bind"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="clickToAddDevice"
                android:text="@string/devicebind" />

            <Button
                android:id="@+id/scan_firend_qr"
                android:layout_width="match_parent"
                android:onClick="clickAddFriendDevice"
                android:layout_height="wrap_content"
                android:text="@string/scan_friend_qr" />

            <Button
                android:id="@+id/video_list"
                android:layout_width="match_parent"
                android:onClick="clickShowVideoList"
                android:layout_height="wrap_content"
                android:text="@string/demo_video_list" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/pb_loading"
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:layout_gravity="center"
            android:layout_marginVertical="@dimen/dp_210"
            android:indeterminateBehavior="repeat"
            android:indeterminateDrawable="@drawable/live_progress_bar"
            android:indeterminateDuration="1200"
            android:indeterminateTint="@color/theme_color"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>